--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,534 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+:root, :root[data-theme='dark']{
+    --primary-color: #fbffff;
+
+    --primary-bg-color: #151825;
+    --secondary-bg-color: #121932;
+    --primary-border-color: #243b69;
+    --secondary-border-color: #2b4d92;
+
+    --title-color: #F9FFFF;
+    --text-color: #F9FFFF;
+    --link-color: #F9FFFF;
+    --icon-color: #3D85D1;
+}
+
+:root[data-theme='light']{
+    --primary-color: #faf9fd;
+
+    --primary-bg-color: #F9FFFF;
+    --secondary-bg-color: #FBFFFF;
+    --primary-border-color: #666565;
+    --secondary-border-color: #513892;
+
+    --title-color: #f9fdf6;
+    --text-color: #4c3781;
+    --link-color: #f9fdf6; /**9A9A9C*/
+    --icon-color: #674cae;
+}
+
+html[data-theme='light'] .brand__logo{
+    filter: invert(1);
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    vertical-align: baseline;
+    list-style: none;
+}
+
+body{
+    background: var(--primary-bg-color);
+    font-family: 'Inter', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--text-color);
+}
+
+a{
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+a:hover{
+    color: var(--primary-color);
+    font-weight: 600;
+}
+
+i{
+    color: var(--icon-color);
+}
+
+b{
+    font-weight: 400;
+}
+
+h1{
+    font-size: 2.5rem;
+    font-weight: 200;
+}
+
+h2{
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+h1, h2, h3 {
+    font-family: "League Spartan", Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    color: var(--title-color);
+    font-weight: 200;
+}
+
+p{
+    font-size: 1.25rem;
+    text-align: justify;
+}
+
+.header{
+    display: flex;
+    flex-flow: row wrap; /** junção de flex-direction + flex-wrap*/
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
+}
+
+.header__toggle{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.header__brand .brand__logo {
+    width: 3.25rem;
+    height: 3.25rem;
+}
+
+#toggleTheme{
+    font-size: 1.5rem;
+    color: var(--primary-color);
+    cursor: pointer;
+    transition: ease-in-out .4s;
+}
+
+.menu{
+    display: flex;
+    align-items: center;
+    background-color: var(--primary-bg-color);
+}
+
+.menu__item{
+    width: 100%;
+}
+
+.menu--mobile{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    justify-content: space-between;
+    border-top: 1px solid var(--border-color);
+}
+
+.menu--mobile .menu__link{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    gap: .5rem;
+}
+
+.menu__link.active .menu__icon,
+.menu__link.active .menu__text,
+.menu__link:hover .menu__icon,
+.menu__link:hover .menu__text{
+    color: var(--primary-color);
+    font-weight: 600;
+}
+
+.menu__icon, .menu__text{
+    color: var(--text-color);
+}
+
+.menu__icon{
+    font-size: 1.5rem;
+}
+
+.menu__text{
+    font-size: .75rem;
+    text-transform: uppercase;
+}
+
+.header__nav{
+    display: none;
+}
+
+.menu--principal{
+    gap: 1rem;
+}
+
+.menu--social{
+    gap: 1rem;
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+    width: 100%;
+    background: transparent;
+    border-radius: 3.125rem;
+    border: none;
+    padding: 0.875rem 1.5rem;
+    transition: ease-in-out .3s;
+    cursor: pointer;
+    color: var(--primary-color);
+}
+
+.btn:hover{
+    transform: scale(1.05);
+    transition: ease-in-out .3s;
+}
+
+.btn span, .btn i {
+    font-size: 1.25rem;
+    text-transform: uppercase;
+}
+
+.btn--primary span{
+    color: var(--primary-color);
+}
+
+.btn--primary{
+    border-radius: 3.125rem;
+    border: 1px solid var(--primary-color);
+}
+
+main, .projects{
+    padding: 2.5rem 1rem;
+}
+
+main {
+    padding: 2.5rem 1rem;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.main__content1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 1.5rem;
+}
+
+.main__content2 iframe{
+    width: 100%;
+    aspect-ratio: 16/9;
+}
+
+.technologies{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 6.25rem 1rem 2rem;
+    background: var(--secondary-bg-color);
+    margin-top: -5.5rem;
+}
+
+.technologies h2{
+    font-size: 2rem;
+    text-transform: none;
+}
+
+.technologies__list{
+    display: flex;
+    flex-flow: row wrap;
+    gap: .5rem;
+}
+
+.technologies__item{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 4.8rem;
+    height: 4.8rem;
+    aspect-ratio: 1/1;
+    border: 1px solid var(--secondary-border-color);
+    border-radius: 50rem;
+}
+
+.technologies__logo{
+    height: 2.4rem;
+}
+
+.projects{
+    display: flex;
+    flex-direction: column;
+}
+
+.projects__card{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.card__cover{
+    width: 100%;
+    border-radius: 0.5rem;
+    object-fit: cover;
+    object-position: center;
+}
+
+.card__body{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.card__title{
+    font-size: 1.5rem;
+}
+
+.card__description{
+    font-size: 1rem;
+    color: var(--title-color);
+}
+
+.card__list{
+    margin-left: 1rem;
+}
+
+.card__item{
+    list-style: disc;
+}
+
+.card__buttons{
+    display: flex;
+}
+
+.card__buttons .technologies__item{
+    width: 4rem;
+    height: 4rem;
+}
+
+.card__body .technologies__logo{
+    height: 2rem;
+}
+
+.about__content2 .col1,
+.about__content2 .col2{
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    gap: 2rem;
+}
+
+.about__content2 .col1 .row1,
+.about__content2 .col1 .row2{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+#accordion{
+    border-radius: .5rem;
+    border: 1px solid var(--primary-border-color);
+}
+
+.accordion__header{
+    width: 100%;
+    display: flex;
+    padding: 0.75rem 1rem;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid var(--primary-bg-color);
+    background: transparent;
+}
+
+.accordion__header span{
+    color: var(--title-color);
+    font-size: 1.15rem;
+}
+
+.accordion__header .start{
+    border-radius: 0.025rem 0.25rem 0rem 0rem;
+}
+
+.accordion__header .end, 
+.accordion__item.active .accordion__body.end{
+    border-radius: 0rem 0rem 0.25rem 0.25rem;
+}
+
+.accordion__item.active .accordion__header .end{
+    border: 0;
+}
+
+.accordion__body{
+    display: none;
+    padding: 1.25rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.625rem;
+    border: 1px solid var(--primary-border-color);
+}
+
+.accordion__item.active .accordion__header{
+    background: var(--secondary-bg-color);
+}
+
+.accordion__item.active .accordion__body{
+    display: flex;
+}
+
+.accordion__item.active .bi-caret-down-fill{
+    transform: rotate(180deg);
+}
+
+footer{
+        margin-bottom: 5rem;
+    }
+
+footer p {
+    font-size: .875rem;
+    text-align: center;
+    padding: 1rem;
+    margin-bottom: 5rem;
+}
+
+@media (min-width: 768px){
+    .header{
+        position: fixed;
+        border-top: 1px solid var(--primary-border-color);
+        padding: 1rem 6rem;
+        background: var(--primary-bg-color);
+    }
+    .nav--mobile{
+        display: none;
+    }
+    .header__nav{
+        display: flex;
+    }
+    .header__nav,
+    .header__toggle{
+        min-width: 30%;
+    }
+    h1{
+        font-size: 4rem;
+    }
+    h2{
+       font-size: 3rem;
+       letter-spacing: 0.4rem; 
+    }
+    main, .projects{
+        padding: 8rem 6rem 4rem 6rem;
+    }
+    .main__content1{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .technologies{
+        padding: 6.25rem 6rem 2rem 6rem;
+        margin-top: -6rem;
+    }
+    footer{
+        margin: 0;
+    }
+}
+
+@media (min-width: 992px){
+    .projects__card{
+        flex-direction: row;
+    }
+    .projects__card.card--reverse{
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+    .card__cover{
+        width: 55%;
+    }
+    .about{
+        gap: 5rem;
+    }
+    .about__content1, .about__content2{
+        display: grid;
+        grid-template-columns: 34% 60%;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 4rem;
+    }
+}
+
+@media (min-width: 1200px){
+    h2{
+       font-size: 4rem; 
+    }
+    main{
+        padding: 12rem 6rem 2rem;
+    }
+    .main__content1 .btn{
+
+        width: auto;
+    }
+    .technologies{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .technologies h2{
+        font-size: 3.5rem;
+        width: 60%;
+        padding: 10rem 6rem 4rem;
+    }
+    .technologies__list{
+        gap: 1rem;
+    }
+    .technologies__item{
+        width: 6rem;
+        height: 6rem;
+    }
+    .technologies__logo{
+        height: 3rem;
+    }
+    .projects__card{
+    flex-direction: row;
+    }
+    .card__cover{
+        width: 50%;
+    }
+    .card__title{
+        font-size: 3.25rem;
+    }
+    .card__description, .card__item{
+        font-size: 1.25rem;
+    }
+    .card__buttons .btn{
+        width: auto;
+    }
+}
+
+@media (min-width: 1400px){
+    h1{
+        font-size: 6.25rem;
+    }
+    h2{
+       font-size: 5rem; 
+    }
+    p{
+        font-size: 1.5rem;
+    }
+    .header{
+        padding: 1rem 15rem;
+    }
+    main{
+        padding: 12rem 15rem 2rem;
+    }
+    .technologies{
+        padding: 10rem 15rem 4rem;
+    }
+}
